--- a/package.json
+++ b/package.json
@@ -3,24 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "setup": "yarn install && husky install && yarn husky add .husky/pre-commit \" yarn eslint . && yarn prettier --write .\"",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:es": "eslint --ext .js,.jsx .",
     "lint:fix": "eslint --fix --ext .js,.jsx .",
-    "prepare": "husky install",
-    "test": "npm run"
+    "test": "",
+    "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
     "husky": "^8.0.2",
     "next": "13.0.6",
+    "prettier": "^2.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.0.6",
+    "eslint-config-prettier": "^8.5.0",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.0"
   }
 }
