--- a/package.json
+++ b/package.json
@@ -14,14 +14,37 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
+    "@mui/x-data-grid": "^5.17.14",
+    "@mui/x-data-grid-generator": "^5.17.14",
+    "@mui/x-date-pickers": "^5.0.11",
+    "@next-auth/sequelize-adapter": "^1.0.7",
+    "babel": "^6.23.0",
     "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "framer-motion": "^7.10.3",
     "husky": "^8.0.2",
+    "lodash": "^4.17.21",
+    "mysql2": "^2.3.3",
     "next": "13.0.6",
+    "next-auth": "^4.18.7",
+    "nodemailer": "^6.8.0",
     "prettier": "^2.8.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "recharts": "^2.2.0",
+    "sequelize": "^6.28.0",
+    "stripe": "^11.4.0",
+    "typed.js": "^2.0.12"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "cypress": "^12.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.0.6",
     "eslint-config-prettier": "^8.5.0",
