--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid-generator": "^5.17.14",
     "@mui/x-date-pickers": "^5.0.11",
     "@next-auth/sequelize-adapter": "^1.0.7",
+    "axios": "^1.2.2",
     "babel": "^6.23.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
