--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-modal": "^3.16.1",
     "recharts": "^2.2.0",
     "sequelize": "^6.28.0",
