--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^7.10.3",
     "husky": "^8.0.2",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "next": "13.0.6",
