--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@next-auth/sequelize-adapter": "^1.0.7",
     "axios": "^1.2.2",
     "babel": "^6.23.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "^2.2.9",
