--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^8.0.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "next": "13.0.6",
     "next-auth": "^4.18.7",
