--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@next/next/recommended",
+    "next/babel",
     "next/core-web-vitals",
     "prettier"
   ],
